examples/test/testpolicy10613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10613
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key23: value43
      key32: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value49
      podSelector:
        matchLabels:
          key41: value21
          key35: value24
